@@ -1,2 +1,2 @@
-AppVersion = "LimeChat for OSX 0.8";
+AppVersion = "LimeChat for OSX 0.9";
 CtcpClientInfo = "DCC VERSION CLIENTINFO USERINFO PING TIME";
