@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{607, 61}, {1037, 1105}}</string>
+	<string>{{573, 65}, {1037, 1105}}</string>
 </dict>
 </plist>
