@@ -173,7 +173,7 @@ class AutoOpDialog < OSX::NSObject
     end
   end
   
-  objc_method :outlineView_isItemExpandable, 'c@:@@'
+  #objc_method :outlineView_isItemExpandable, 'c@:@@'
   def outlineView_isItemExpandable(sender, item)
     case item
     when IRCWorldConfig; item.units.length > 0
@@ -246,7 +246,7 @@ class AutoOpDialog < OSX::NSObject
   
   # edit
   
-  objc_method 'control:textView:doCommandBySelector:', 'c@:@@:'
+  #objc_method 'control:textView:doCommandBySelector:', 'c@:@@:'
   def control_textView_doCommandBySelector(control, textview, selector)
     case selector
     when 'moveDown:'
