@@ -61,7 +61,7 @@ class ChannelDialog < OSX::NSObject
     NSApp.beginSheet_modalForWindow_modalDelegate_didEndSelector_contextInfo(@window, owner, self, 'sheetDidEnd:returnCode:contextInfo:', nil)
   end
   
-  objc_method :sheetDidEnd_returnCode_contextInfo, 'v@:@i^v'
+  #objc_method :sheetDidEnd_returnCode_contextInfo, 'v@:@i^v'
   def sheetDidEnd_returnCode_contextInfo(sender, code, info)
     @window.orderOut(self)
     @modal = false
