@@ -26,7 +26,7 @@ class NickSheet < OSX::NSObject
     NSApp.beginSheet_modalForWindow_modalDelegate_didEndSelector_contextInfo(@sheet, @window, self, 'sheetDidEnd:returnCode:contextInfo:', nil)
   end
   
-  objc_method :sheetDidEnd_returnCode_contextInfo, 'v@:@i^v'
+  #objc_method :sheetDidEnd_returnCode_contextInfo, 'v@:@i^v'
   def sheetDidEnd_returnCode_contextInfo(sender, code, info)
     @sheet.orderOut(self)
     @modal = false
