@@ -419,7 +419,7 @@ class IRCWorld < OSX::NSObject
     end
   end
   
-  objc_method :outlineView_shouldEditTableColumn_item, 'c@:@@@'
+  #objc_method :outlineView_shouldEditTableColumn_item, 'c@:@@@'
   def outlineView_shouldEditTableColumn_item(sender, column, item)
     false
   end
@@ -465,7 +465,7 @@ class IRCWorld < OSX::NSObject
     item.number_of_children
   end
   
-  objc_method :outlineView_isItemExpandable, 'c@:@@'
+  #objc_method :outlineView_isItemExpandable, 'c@:@@'
   def outlineView_isItemExpandable(sender, item)
     item.number_of_children > 0
   end
