@@ -1,3 +1,7 @@
+2007-08-15  Satoshi Nakagawa <artension@gmail.com>
+
+	Commented needless objc_method and objc_class_method.
+
 2007-08-14  Satoshi Nakagawa <artension@gmail.com>
 
 	Added auto masking for registering auto op.
